--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -303,6 +303,7 @@
     <Content Include="Page_Master\Ship_Profile.aspx" />
     <Content Include="Page_Master\TaiNanHuHong.aspx" />
     <Content Include="Page_Master\ThanVo.aspx" />
+    <Content Include="Page_Master\TheoDoiCaiHoanThayThe.aspx" />
     <Content Include="Page_Master\ThoiGianLamViecMay.aspx" />
     <Content Include="Page_Master\TinhNangChuYeu.aspx" />
     <Content Include="Page_Master\TinhNangThietBi.aspx" />
@@ -615,6 +616,13 @@
     </Compile>
     <Compile Include="Page_Master\ThanVo.aspx.designer.cs">
       <DependentUpon>ThanVo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\TheoDoiCaiHoanThayThe.aspx.cs">
+      <DependentUpon>TheoDoiCaiHoanThayThe.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\TheoDoiCaiHoanThayThe.aspx.designer.cs">
+      <DependentUpon>TheoDoiCaiHoanThayThe.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\ThoiGianLamViecMay.aspx.cs">
       <DependentUpon>ThoiGianLamViecMay.aspx</DependentUpon>
