--- a/CSB/CSB/CSB.csproj
+++ b/CSB/CSB/CSB.csproj
@@ -280,6 +280,7 @@
     <Content Include="Page_Master\Add_Ship.aspx" />
     <Content Include="Page_Master\Add_Staff.aspx" />
     <Content Include="Page_Master\Change_Password.aspx" />
+    <Content Include="Page_Master\DangKyPhuongTien.aspx" />
     <Content Include="Page_Master\HoatDongTau.aspx" />
     <Content Include="Page_Master\Information_User.aspx" />
     <Content Include="Page_Master\KiemTraKyThuat.aspx" />
@@ -469,6 +470,13 @@
     </Compile>
     <Compile Include="Page_Master\Change_Password.aspx.designer.cs">
       <DependentUpon>Change_Password.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page_Master\DangKyPhuongTien.aspx.cs">
+      <DependentUpon>DangKyPhuongTien.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page_Master\DangKyPhuongTien.aspx.designer.cs">
+      <DependentUpon>DangKyPhuongTien.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page_Master\HoatDongTau.aspx.cs">
       <DependentUpon>HoatDongTau.aspx</DependentUpon>
