--- a/DHSLAPI/DHSLAPI/Web.config
+++ b/DHSLAPI/DHSLAPI/Web.config
@@ -79,7 +79,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS01;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
