--- a/DHSLAPI/public/Web.config
+++ b/DHSLAPI/public/Web.config
@@ -14,8 +14,16 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation targetFramework="4.6.1" />
+    <compilation targetFramework="4.8" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -80,7 +88,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="CSB_ConnectionString" connectionString="Data source=.\SQLEXPRESS;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="CSB_ConnectionString" connectionString="Data source=.;initial catalog=CSB;integrated security=false;user=sa; password=1; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
